Fix colour for dark mode

--- a/app/app.css
+++ b/app/app.css
@@ -128,7 +128,7 @@
     --color-purple: hsl(273.5 86.9% 21% / 0.5);
     --color-fuchsia: hsl(296.8 90.2% 16.1% / 0.5);
     --color-pink: hsl(336.2 83.9% 17.1% / 0.5);
-    --color-rose: hsl(343.1 87.7% 15.9% / 0.5%)
+    --color-rose: hsl(343.1 87.7% 15.9% / 0.5)
 }
 
 
